# system_check

./: pyproject.toml
system_check/: check_cpu.py  check_gpu.py
